# CLOSEDGATE

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  buzzer.c  buzzer.h  closedgate_main.c  mifare_auth.c  mifare_auth.h  nfc_handler.c  nfc_handler.h  relay_control.c  relay_control.h  wifi_manager.c  wifi_manager.h  yubikey_verify.c  yubikey_verify.h
